--- a/static/style.css
+++ b/static/style.css
@@ -1,90 +1,87 @@
+:root {
+    --contrast-color: rgb(240, 24, 60);
+}
+
 body {
-    display: flex;    
-    background: rgb(39, 39, 39);
+    display: flex;
+    background: url('wp2.jpg');
     overflow: hidden;
     margin:0 auto;
     user-select: none;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    row-gap: 30px;
+    row-gap: 50px;
     text-align: center;
     font-family: 'roboto';
-    padding-top: 100px;
+    padding-top: 80px;
 }
 
-.avaliable-list {    
-    box-shadow: inset 1px;
-    height: 600px;
-    width: 500px;    
-    border-radius: 5px;
+.header {
+    height: 10%;
+    width: 100%;
     background: rgb(40, 40, 40);
-    border: 1px solid rgb(13, 104, 209);    
-    padding:10px;
-}
-
-.title {
-    height: 25px;
-    width: 200px;
-    border-radius:5px;
-    background: rgb(13, 104, 209);
-    margin-left: 80px;
-    font-size: 20px;
-    color:white;
-    margin-top:-22px;
-
-}
-
-.show-list {
-    height: 500px;
-    width: 500px; 
-    margin-top: 20px;
-    /* background:gray;     */
-    flex-direction: column;
+    background: var(--contrast-color);
     display: flex;
-    row-gap: 10px;
-}
-
-.element {
-    height: 50px;
-    width: 500px; 
-    background:rgb(13, 104, 209);    
-    font-size: 24px;
-    border-radius:5px;
-    display:flex;    
-    text-align: center;
-    column-gap: 10px;    
-    line-height: 200%;
-    color:white;
-}
-
-.btn-add, .btn-rem {
-    height: 40px;
-    width: 40px;
-    background: rgb(39, 39, 39);    
-    color:white;
     justify-content: center;
     align-items: center;
-    text-align: center; 
-    font-size: 20;
-    margin-left: 30px;           
-    margin-top: 5px;
-    border-radius: 5px;
-    line-height: 200%;
+    column-gap: 10px;
+    font-size: 26px;
+    color:white;    
+    font-weight: 500;
+    box-shadow: 0px 0px 10px 0px var(--contrast-color);
+}
+
+.topList {
+    height: 25px;
+    width: 100%;
+    column-gap: 20px;
+    justify-content: center;
     display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    font-size: 26px;
+    color:white;
 }
 
-.btn-add:hover {
-    background: rgb(6, 194, 78);  
+.topText {
+    box-shadow: inset 1px;    
+    height: 30px;
+    width: 150px;    
+    border-radius: 5px;
+    background: var(--contrast-color);
+    align-items: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    font-size: 18px;    
+    color:white;    
 }
 
-.btn-rem:hover {
-    background: rgb(240, 24, 60);  
+.topButton{    
+    box-shadow: inset 1px;    
+    height: 30px;
+    width: 30px;    
+    border-radius: 5px;
+    background: var(--contrast-color);
+    align-items: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    font-size: 15px;    
+    color:white;    
+}
+
+.topButton:hover {
+    background: rgb(240, 240, 240);
+    box-shadow: 0px 0px 10px 0px rgb(40, 40, 40);
+    color: rgb(40, 40, 40);
+    cursor: pointer;
 }
 
 .side-div {
-    display:block;    
-    margin-left: 50px;
+    display:block;        
 }
 
 .selected-side {
@@ -92,58 +89,101 @@ body {
     height: 495px;
     width: 400px;    
     border-radius: 5px;
-    background: rgb(40, 40, 40);
-    border: 1px solid rgb(13, 104, 209);
+    background-color: rgb(40, 40, 40);    
     padding:10px;    
+    border: 1px solid var(--contrast-color);
+    box-shadow: 0px 0px 20px 0px var(--contrast-color);;
 }
-
 
 .selected-list {
-    height: 700px;
-    width: 500px; 
-    margin-top: 20px;
-    /* background:gray;     */
+    height: 450px;
+    width: 400px; 
+    margin-top: 20px;    
     flex-direction: column;
     display: flex;
-    row-gap: 10px;
+    background-color: rgb(40, 40, 40);
+    color:white;
+    row-gap: 10px;       
+    overflow-x: hidden;
+    overflow-y: auto;       
 }
 
-.element-selected {
+.empty-list {
+    margin-top:190px;
+    color: rgba(226, 226, 226, 0.5);    
+}
+
+.element {
     height: 50px;
     width: 400px; 
-    background:rgb(13, 104, 209);    
-    font-size: 26px;
+    background:var(--contrast-color);    
+    font-size: 20px;
     border-radius:5px;
     display:flex;    
     text-align: center;
     column-gap: 10px;    
-    line-height: 200%;
+    line-height: 250%;
     color:white;
+    box-shadow: 0px 0px 10px 0px rgb(0, 0, 0);
 }
 
-.button-area {
-    display:flex;
-    justify-self: center;
+.btn-rem {
+    height: 30px;
+    width: 30px;
+    background: rgb(39, 39, 39);    
+    color:white;
+    justify-content: center;
     align-items: center;
-    column-gap: 10px;
-}
-
-.result, .add-media{
-    margin-top:30px;
-    box-shadow: inset 1px;
-    margin-left: 1%;
-    height: 50px;
-    width: 182px;    
+    text-align: center; 
+    font-size: 20;
+    margin-left: 30px;           
+    margin-top: 10px;
     border-radius: 5px;
-    background: rgb(40, 40, 40);
-    border: 1px solid rgb(13, 104, 209);
-    padding:10px;
-    font-size: 20px;
-    color:white;
-    line-height: 250%;        
+    line-height: 200%;
+    display: flex;
 }
 
-.result:hover, .add-media:hover {
-    background: rgb(6, 194, 78);  
-    border: 1px solid rgb(5, 131, 53);
+.btn-rem:hover {
+    background: rgb(240, 240, 240);  
+    color:rgb(40, 40, 40);
+    box-shadow: 0px 0px 10px 0px rgb(40, 40, 40);
+}
+
+.credits-area {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    flex-direction: column;
+    position:absolute;
+    right: 0;
+    bottom: 10px;
+    font-size: 20px;
+    width: 250px;
+    height: 150px;
+    color: rgb(240, 240, 240);
+    line-height: 150%;
+    background: rgb(40, 40, 40);
+    border: 1px solid var(--contrast-color);
+    border-right:none;
+    box-shadow: 0px 0px 10px 0px var(--contrast-color);
+    border-radius: 10px 0 0 10px;
+}
+
+.contact:hover {
+    cursor: pointer;
+}
+
+::-webkit-scrollbar {
+    border-radius: 0rem 0rem 0rem 0rem;
+    width: 2px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 0rem 0rem 0rem 0rem;
 }
